# CIS164AdvCppInventoryJobManagementDatabase

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serverlogonpage.cpp  serverlogonpage.h  serverlogonpage.ui
mySQLbuildScript/: DatabaseBuildScript.sql  DatabaseDummyData.sql
objects/: Customer.cpp  Customer.h  Item.cpp  Item.h  Job.cpp  Job.h  Recipe.cpp  Recipe.h
util/: sqlConnection.cpp  sqlConnection.h
